Remove unnecessary array conversions (#260)